// attributes_phase2.proto - Phase 2 Extension for Attribute Service
// Version: v1
// Created: 2025-12-17
// Description: Additional RPC methods for Phase 2 (GetAttributesByCategory, GetAttributeValues)

syntax = "proto3";

package attributessvc.v1;

option go_package = "github.com/vondi-global/listings/api/gen/attributessvc/v1;attributessvcv1";

import "google/protobuf/timestamp.proto";

// ============================================================================
// AttributeService - Phase 2 Extension
// ============================================================================
service AttributeService {
  // GetAttributesByCategory получает атрибуты для категории (с наследованием)
  rpc GetAttributesByCategory(GetAttributesByCategoryRequest) returns (GetAttributesByCategoryResponse);

  // GetAttributeValues получает предопределённые значения атрибута
  rpc GetAttributeValues(GetAttributeValuesRequest) returns (GetAttributeValuesResponse);
}

// ============================================================================
// MESSAGE TYPES
// ============================================================================

// Attribute представляет атрибут товара
message Attribute {
  int32 id = 1;
  string code = 2;
  string name = 3;  // Локализованное название
  string display_name = 4;
  string attribute_type = 5;  // text, select, number, boolean, etc.
  string purpose = 6;  // regular, variant, both
  bool is_searchable = 7;
  bool is_filterable = 8;
  bool is_required = 9;
  bool is_variant_compatible = 10;
  bool affects_stock = 11;
  bool affects_price = 12;
  int32 sort_order = 13;
  repeated AttributeValue values = 14;  // Предопределённые значения (опционально)
}

// AttributeValue представляет значение атрибута
message AttributeValue {
  int32 id = 1;
  int32 attribute_id = 2;
  string value = 3;
  string label = 4;  // Локализованное название
  string metadata_json = 5;  // JSON метаданные (например, hex для цвета)
  int32 sort_order = 6;
}

// GetAttributesByCategoryRequest запрос атрибутов категории
message GetAttributesByCategoryRequest {
  string category_id = 1;  // UUID категории
  string locale = 2;  // sr, en, ru
  bool include_values = 3;  // Загружать ли предопределённые значения
}

// GetAttributesByCategoryResponse ответ с атрибутами категории
message GetAttributesByCategoryResponse {
  repeated Attribute attributes = 1;
}

// GetAttributeValuesRequest запрос значений атрибута
message GetAttributeValuesRequest {
  int32 attribute_id = 1;
  string locale = 2;
}

// GetAttributeValuesResponse ответ со значениями атрибута
message GetAttributeValuesResponse {
  repeated AttributeValue values = 1;
}
