syntax = "proto3";

package search.v1;

import "api/proto/search/v1/common.proto";
import "api/proto/search/v1/facets.proto";
import "api/proto/search/v1/filters.proto";
import "api/proto/search/v1/suggestions.proto";
import "api/proto/search/v1/popular.proto";

option go_package = "github.com/sveturs/listings/api/proto/search/v1;searchv1";

// SearchService provides search functionality for marketplace listings
service SearchService {
  // SearchListings searches for listings based on query text and filters
  // Phase 21.1 - Basic full-text search
  rpc SearchListings(SearchListingsRequest) returns (SearchListingsResponse);

  // GetSearchFacets returns aggregations for filter UI
  // Phase 21.2 - Returns category counts, price ranges, attribute values, etc.
  rpc GetSearchFacets(GetSearchFacetsRequest) returns (GetSearchFacetsResponse);

  // SearchWithFilters performs advanced search with filters, sorting, and facets
  // Phase 21.2 - Enhanced search with price, attributes, location, sorting
  rpc SearchWithFilters(SearchWithFiltersRequest) returns (SearchWithFiltersResponse);

  // GetSuggestions provides autocomplete suggestions
  // Phase 21.2 - Uses completion suggester for fast prefix matching
  rpc GetSuggestions(GetSuggestionsRequest) returns (GetSuggestionsResponse);

  // GetPopularSearches returns trending search queries
  // Phase 21.2 - Popular queries by time range for search suggestions UI
  rpc GetPopularSearches(GetPopularSearchesRequest) returns (GetPopularSearchesResponse);
}

// SearchListingsRequest contains search parameters
message SearchListingsRequest {
  // Search query text (optional - can search without query)
  string query = 1;

  // Filter by category ID (optional)
  optional int64 category_id = 2;

  // Results per page (1-100, default: 20)
  int32 limit = 3;

  // Pagination offset (default: 0)
  int32 offset = 4;

  // Use Redis cache for results (default: true)
  bool use_cache = 5;
}

// SearchListingsResponse contains search results
message SearchListingsResponse {
  // List of matching listings
  repeated Listing listings = 1;

  // Total number of matching documents
  int64 total = 2;

  // Search duration in milliseconds
  int32 took_ms = 3;

  // Whether result was served from cache
  bool cached = 4;
}

// Listing and ListingImage are now defined in common.proto
